<resources>
    <string name="app_name">ForkLore_Real</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nutrition_per_serving_kcal_356_fat_13g_carbs_46g">Nutrition:Per Serving kcal:356 fat:13g carbs:46g</string>
    <string name="prep_25_mins_cook_30_mins">Prep:25 mins Cook:30 mins</string>
    <string name="ingredients_n_200g_self_raising_flour_n_1_tsp_baking_powder_n_1_tbsp_golden_caster_sugar_n_3_large_eggs_n_25g_melted_butter_plus_extra_for_cooking_n_200ml_milk_n_vegetable_oil_for_cooking_n_to_serve_n_maple_syrup_n_toppings_of_your_choice_such_as_cooked_bacon_chocolate_chips_blueberries_or_peanut_butter_and_jam_n">Ingredients\n 200g self-raising flour\n 1 ½ tsp baking powder\n 1 tbsp golden caster sugar\n 3 large eggs\n 25g melted butter, plus extra for cooking\n 200ml milk\n vegetable oil, for cooking\n To serve\n maple syrup\n toppings of your choice, such as cooked bacon, chocolate chips, blueberries or peanut butter and jam\n</string>
    <string name="step_1_n_mix_200g_self_raising_flour_1_tsp_baking_powder_1_tbsp_golden_caster_sugar_and_a_pinch_of_salt_together_in_a_large_bowl_n_n_step_2_n_create_a_well_in_the_centre_with_the_back_of_your_spoon_then_add_3_large_eggs_25g_melted_butter_and_200ml_milk_n_n_step_3_n_whisk_together_either_with_a_balloon_whisk_or_electric_hand_beaters_until_smooth_then_pour_into_a_jug_n_n_step_4_n_heat_a_small_knob_of_butter_and_1_tsp_of_oil_in_a_large_non_stick_frying_pan_over_a_medium_heat_when_the_butter_looks_frothy_pour_in_rounds_of_the_batter_approximately_8cm_wide_make_sure_you_don_t_put_the_pancakes_too_close_together_as_they_will_spread_during_cooking_cook_the_pancakes_on_one_side_for_about_1_2_mins_or_until_lots_of_tiny_bubbles_start_to_appear_and_pop_on_the_surface_flip_the_pancakes_over_and_cook_for_a_further_minute_on_the_other_side_repeat_until_all_the_batter_is_used_up_n_n_step_5_n_serve_your_pancakes_stacked_up_on_a_plate_with_a_drizzle_of_maple_syrup_and_any_of_your_favourite_toppings">STEP 1\n Mix 200g self-raising flour, 1 ½ tsp baking powder, 1 tbsp golden caster sugar and a pinch of salt together in a large bowl.\n \n STEP 2\n Create a well in the centre with the back of your spoon then add 3 large eggs, 25g melted butter and 200ml milk.\n \n STEP 3\n Whisk together either with a balloon whisk or electric hand beaters until smooth then pour into a jug.\n \n STEP 4\n Heat a small knob of butter and 1 tsp of oil in a large, non-stick frying pan over a medium heat. When the butter looks frothy, pour in rounds of the batter, approximately 8cm wide. Make sure you don’t put the pancakes too close together as they will spread during cooking. Cook the pancakes on one side for about 1-2 mins or until lots of tiny bubbles start to appear and pop on the surface. Flip the pancakes over and cook for a further minute on the other side. Repeat until all the batter is used up.\n \n STEP 5\n Serve your pancakes stacked up on a plate with a drizzle of maple syrup and any of your favourite toppings.</string>
    <string name="Ingredients_n_1_1_cup_uncooked_bulgur_or_quinoa_n_1_15_ounce_can_chickpeas_drained_and_rinsed_n_english_cucumber_chopped_n_1_4_cup_red_onion_diced_n_1_2_cup_fresh_chopped_parsley_n_1_2_cup_fresh_mint_leaves_chopped_n_cup_fresh_dill_chopped_n_1_3_cup_feta_cheese_crumbles_n_1_3_cup_whole_shelled_pistachios_roasted_n_salt_and_freshly_ground_black_pepper_or_flake_salt_to_taste_n_dressing_n_1_4_cup_extra_virgin_olive_oil_n_1_large_lemon_zest_and_juice_n_1_4_teaspoon_ground_cumin_n_1_clove_garlic">1 cup uncooked bulgur , or quinoa\n 1 15-ounce can chickpeas , drained and rinsed\n ½ English cucumber , chopped\n 1/4 cup red onion , diced\n 1/2 cup fresh chopped parsley\n 1/2 cup fresh mint leaves , chopped\n ¼ cup fresh dill , chopped\n 1/3 cup feta cheese crumbles\n 1/3 cup whole shelled pistachios , roasted\n salt and freshly ground black pepper , or flake salt, to taste\n Dressing:\n 1/4 cup extra virgin olive oil\n 1 large lemon , zest and juice\n 1/4 teaspoon ground cumin\n 1 clove garlic</string>
    <string name="combine_bulgur_and_2_cups_boiling_water_in_a_medium_bowl_set_aside_for_30_minutes_to_an_hour_or_until_water_has_been_absorbed_and_bulgur_is_tender_or_cook_quinoa_according_to_package_instructions_n_make_dressing_by_whisking_dressing_ingredients_in_a_bowl_once_bulgur_or_quinoa_has_cooled_pour_dressing_on_top_and_stir_to_combine_n_add_chickpeas_cucumber_onion_parsley_mint_dill_and_pistachios_and_stir_to_combine_top_with_feta_and_salt_and_pepper_to_taste_n_serve_cold_or_room_temperature_store_leftovers_in_the_fridge_and_enjoy_within_2_3_days">Combine bulgur and 2 cups boiling water in a medium bowl. Set aside for 30 minutes to an hour, or until water has been absorbed and bulgur is tender (OR cook quinoa according to package instructions).\n Make dressing by whisking dressing ingredients in a bowl. Once bulgur or quinoa has cooled, pour dressing on top and stir to combine.\n Add chickpeas, cucumber, onion, parsley, mint, dill and pistachios and stir to combine. Top with feta and salt and pepper, to taste.\n Serve cold or room temperature. Store leftovers in the fridge and enjoy within 2-3 days.</string>
    <string name="for_the_dough_n_300g_strong_white_bread_flour_plus_extra_for_dusting_n_3g_about_half_a_sachet_fast_action_dried_yeast_n_1_tbsp_olive_oil_n_for_the_filling_n_1_tomato_halved_and_sliced_n_4_slices_cooked_sausage_n_150g_mozzarella_ball_sliced_and_seasoned_n_small_handful_of_rocket_optional_n_6_tbsp_pesto_see_below_for_the_recipe_n_1_tbsp_olive_oil">For the dough\n 300g strong white bread flour, plus extra for dusting\n 3g (about half a sachet) fast-action dried yeast\n 1 tbsp olive oil\n For the filling\n 1 tomato, halved and sliced\n 4 slices cooked sausage\n 150g mozzarella ball, sliced and seasoned\n small handful of rocket (optional)\n 6 tbsp pesto (see below for the recipe)\n 1 tbsp olive oil</string>
    <string name="step_1_n_put_the_flour_in_a_large_bowl_then_stir_in_the_yeast_and_a_large_pinch_of_salt_make_a_well_in_the_centre_pour_in_175ml_warm_water_and_the_oil_and_bring_together_with_a_wooden_spoon_to_make_a_soft_fairly_wet_dough_turn_out_onto_a_lightly_floured_surface_and_knead_for_5_8_mins_until_smooth_divide_the_dough_into_four_balls_and_arrange_on_a_floured_tray_well_spaced_apart_cover_with_a_tea_towel_and_set_aside_for_about_40_mins_1_hr_until_doubled_in_size_n_n_step_2_n_heat_the_oven_to_240c_220c_fan_gas_8_and_put_a_baking_tray_in_the_oven_to_heat_up_roll_the_dough_balls_out_on_a_floured_surface_into_long_baguette_sticks_about_22_25cm_long_place_on_the_hot_tray_and_bake_for_10_12_mins_until_puffed_up_and_golden_then_leave_to_cool_can_be_made_a_few_hours_ahead_of_baking_n_n_step_3_n_to_assemble_split_the_bread_down_one_side_and_neatly_layer_in_the_tomato_sausage_and_rocket_if_using_mix_the_pesto_with_the_olive_oil_drizzle_over_halve_and_serve">STEP 1\n Put the flour in a large bowl, then stir in the yeast and a large pinch of salt. Make a well in the centre, pour in 175ml warm water and the oil and bring together with a wooden spoon to make a soft, fairly wet dough. Turn out onto a lightly floured surface and knead for 5-8 mins until smooth. Divide the dough into four balls and arrange on a floured tray, well spaced apart. Cover with a tea towel and set aside for about 40 mins-1 hr until doubled in size.\n \n STEP 2\n Heat the oven to 240C/220C fan/gas 8 and put a baking tray in the oven to heat up. Roll the dough balls out on a floured surface into long baguette sticks about 22-25cm long, place on the hot tray and bake for 10-12 mins until puffed up and golden, then leave to cool. Can be made a few hours ahead of baking.\n \n STEP 3\n To assemble, split the bread down one side and neatly layer in the tomato, sausage, and rocket, if using. Mix the pesto with the olive oil, drizzle over, halve and serve.</string>
    <string name="_400g_can_chickpeas_rinsed_and_drained_n_1_small_red_onion_roughly_chopped_n_1_garlic_clove_chopped_n_handful_of_flat_leaf_parsley_or_curly_parsley_n_1_tsp_ground_cumin_n_1_tsp_ground_coriander_n_tsp_harissa_paste_or_chilli_powder_n_2_tbsp_plain_flour_n_2_tbsp_sunflower_oil_n_toasted_pitta_bread_to_serve_n_200g_tub_tomato_salsa_to_serve_n_green_salad_to_serve_n">400g can chickpeas, rinsed and drained\n 1 small red onion, roughly chopped\n 1 garlic clove, chopped\n handful of flat-leaf parsley or curly parsley\n 1 tsp ground cumin\n 1 tsp ground coriander\n ½ tsp harissa paste or chilli powder\n 2 tbsp plain flour\n 2 tbsp sunflower oil\n toasted pitta bread, to serve\n 200g tub tomato salsa, to serve\n green salad, to serve\n</string>
    <string name="step_1_n_drain_the_chickpeas_and_pat_dry_with_kitchen_paper_tip_into_a_food_processor_along_with_the_onion_garlic_parsley_cumin_coriander_harissa_paste_flour_and_a_little_salt_blend_until_fairly_smooth_then_shape_into_four_patties_with_your_hands_n_n_step_2_n_heat_the_sunflower_oil_in_a_non_stick_frying_pan_and_fry_the_burgers_for_3_mins_on_each_side_until_lightly_golden_serve_with_the_toasted_pitta_bread_tomato_salsa_and_green_salad">STEP 1\n Drain the chickpeas and pat dry with kitchen paper. Tip into a food processor along with the onion, garlic, parsley, cumin, coriander, harissa paste, flour and a little salt. Blend until fairly smooth, then shape into four patties with your hands.\n \n STEP 2\n Heat the sunflower oil in a non-stick frying pan, and fry the burgers for 3 mins on each side until lightly golden. Serve with the toasted pitta bread, tomato salsa and green salad.</string>
    <string name="penne_rigate_durum_wheat_pasta_500g_package_n_uf05aany_pasta_you_like_n_n_creamy_pesto_sauce_n_n_onion_medium_size_125g_n_uf05afinely_chopped_n_garlic_7_cloves_n_uf05a6_8_cloves_crushed_n_olive_oil_4_tablespoons_total_40ml_n_uf05afor_frying_n_salt_heaping_teaspoon_n_black_pepper_1_2_flat_teaspoon_n_uf05acrushed_n_dried_herb_mix_heaping_tablespoon_6g_n_garlic_powder_1_4_flat_teaspoon_total_1g_n_crushed_chili_1_4_flat_teaspoon_total_1g_n_basil_leaves_from_one_stem_2g_n_basil_and_nut_spread_glass_jar_180g_n_uf05aany_pesto_you_like_n_heavy_cream_38_carton_box_250ml_n_uf05aor_cooking_cream_n_mozzarella_cheese_2_handfuls_total_42g_n_uf05agrated_or_gouda_n_fresh_oregano_a_few_leaves_n">Penne Rigate - Durum Wheat Pasta - 500g Package\n Any pasta you like\n \n Creamy Pesto Sauce\n \n Onion - Medium size (125g)\n Finely chopped\n Garlic - 7 cloves\n 6-8 cloves crushed\n Olive oil - 4 tablespoons - total (40ml)\n For frying\n Salt - Heaping teaspoon\n Black pepper - 1/2 flat teaspoon\n Crushed\n Dried herb mix - Heaping tablespoon (6g)\n Garlic powder - 1/4 flat teaspoon - total (1g)\n Crushed chili - 1/4 flat teaspoon - total (1g)\n Basil - Leaves from one stem (2g)\n Basil and nut spread - Glass jar (180g)\n Any pesto you like\n Heavy cream 38% - Carton box (250ml)\n Or cooking cream\n Mozzarella cheese - 2 handfuls - total (42g)\n Grated (or Gouda)\n Fresh oregano - A few leaves\n</string>
    <string name="pannuzo_sandwich">Pannuzo Sandwich</string>
</resources>