<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PannuzoSandwich"
    android:background="#ADD8E6">
    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="93dp"
        android:layout_marginBottom="695dp"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/pannuzo_sandwich"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="293dp"
        android:layout_height="79dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="613dp"
        android:background="@drawable/logo_bkg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/leavs" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="149dp"
        android:layout_height="137dp"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="228dp"
        android:layout_marginBottom="530dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="36dp"
        android:layout_height="50dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="192dp"
        android:layout_marginBottom="645dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_access_time_24" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="50dp"
        android:layout_height="56dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="162dp"
        android:layout_marginEnd="178dp"
        android:layout_marginBottom="589dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chef_hat" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="119dp"
        android:layout_height="40dp"
        android:layout_marginStart="215dp"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="645dp"
        android:fontFamily="@font/berkshire_swash"
        android:text="prep: 20 mins           cook: 12 mins "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="68dp"
        android:layout_height="27dp"
        android:layout_marginStart="215dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="600dp"
        android:fontFamily="@font/berkshire_swash"
        android:text="Easy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="182dp"
        android:layout_height="42dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="219dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="546dp"
        android:fontFamily="@font/berkshire_swash"
        android:text="Nutriton:Per Serving           kcal:552  fat:25g Protien:22g"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="391dp"
        android:layout_height="528dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="398dp"
                android:layout_height="764dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/berkshire_swash"
                android:text="@string/for_the_dough_n_300g_strong_white_bread_flour_plus_extra_for_dusting_n_3g_about_half_a_sachet_fast_action_dried_yeast_n_1_tbsp_olive_oil_n_for_the_filling_n_1_tomato_halved_and_sliced_n_4_slices_cooked_sausage_n_150g_mozzarella_ball_sliced_and_seasoned_n_small_handful_of_rocket_optional_n_6_tbsp_pesto_see_below_for_the_recipe_n_1_tbsp_olive_oil"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="67dp"
                android:layout_height="23dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="243dp"
                android:layout_marginEnd="323dp"
                android:layout_marginBottom="322dp"
                android:fontFamily="@font/berkshire_swash"
                android:singleLine="false"
                android:text="Method"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.163" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="384dp"
                android:layout_height="482dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="300dp"
                android:layout_marginEnd="1dp"
                android:fontFamily="@font/berkshire_swash"
                android:text="@string/step_1_n_put_the_flour_in_a_large_bowl_then_stir_in_the_yeast_and_a_large_pinch_of_salt_make_a_well_in_the_centre_pour_in_175ml_warm_water_and_the_oil_and_bring_together_with_a_wooden_spoon_to_make_a_soft_fairly_wet_dough_turn_out_onto_a_lightly_floured_surface_and_knead_for_5_8_mins_until_smooth_divide_the_dough_into_four_balls_and_arrange_on_a_floured_tray_well_spaced_apart_cover_with_a_tea_towel_and_set_aside_for_about_40_mins_1_hr_until_doubled_in_size_n_n_step_2_n_heat_the_oven_to_240c_220c_fan_gas_8_and_put_a_baking_tray_in_the_oven_to_heat_up_roll_the_dough_balls_out_on_a_floured_surface_into_long_baguette_sticks_about_22_25cm_long_place_on_the_hot_tray_and_bake_for_10_12_mins_until_puffed_up_and_golden_then_leave_to_cool_can_be_made_a_few_hours_ahead_of_baking_n_n_step_3_n_to_assemble_split_the_bread_down_one_side_and_neatly_layer_in_the_tomato_sausage_and_rocket_if_using_mix_the_pesto_with_the_olive_oil_drizzle_over_halve_and_serve"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.057" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="322dp"
                android:layout_marginBottom="762dp"
                android:fontFamily="@font/berkshire_swash"
                android:text="Ingredients"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="51dp"
        android:layout_height="43dp"
        android:layout_marginStart="334dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="748dp"
        android:onClick="OnMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />



</androidx.constraintlayout.widget.ConstraintLayout>